force-app/main/default/objects/Courier_Control__c/Courier_Control__c.object-meta.xml
<CustomObject>
    <label>Courier Control</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Courier Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>