force-app/main/default/objects/Courier_Control__c/fields/Courier_Agency__c.field-meta.xml
<CustomField>
    <fullName>Courier_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courier Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courier Controls</relationshipLabel>
    <relationshipName>Courier_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>