force-app/main/default/objects/Courier_Control__c/fields/Courier_POD_No__c.field-meta.xml
<CustomField>
    <fullName>Courier_POD_No__c</fullName>
    <label>Courier POD No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>