force-app/main/default/objects/Courier_Control__c/fields/Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Document_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Generated?</label>
    <type>Checkbox</type>
</CustomField>